# electron-napi-svelte-store

./: README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
bindings/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
bindings/src/: lib.rs
ui/: package-lock.json  rollup.config.js
ui/src/: App.svelte  Counter.svelte  Ticker.svelte
